--- a/js/node/split/package.json
+++ b/js/node/split/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
     "iconv-lite": "^0.5.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "superagent": "^5.1.0"
   }
 }
