--- a/vue/qunar-app/package.json
+++ b/vue/qunar-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-ele-app",
+  "name": "qunar-app",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "cysgg <279709624@qq.com>",
@@ -11,8 +11,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "better-scroll": "^1.15.2",
+    "fastclick": "^1.0.6",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -53,8 +54,6 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
