--- a/vue/good-hover-zoom-image/package.json
+++ b/vue/good-hover-zoom-image/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-netease",
+  "name": "good-hover-zoom-image",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "cysgg <279709624@qq.com>",
@@ -11,15 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "better-scroll": "^1.15.2",
-    "fastclick": "^1.0.6",
-    "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2",
-    "vue": "^2.5.2",
-    "vue-lazyload": "^1.3.3",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.1.1"
+    "vue": "^2.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
