--- a/vue/vue-cloud-music/package.json
+++ b/vue/vue-cloud-music/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue-netease",
+  "name": "vue-cloud-music",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "cysgg <279709624@qq.com>",
+  "author": "dufajun <2695647975@qq.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -14,12 +14,9 @@
     "axios": "^0.19.0",
     "better-scroll": "^1.15.2",
     "fastclick": "^1.0.6",
-    "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
     "vue-lazyload": "^1.3.3",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.1.1"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -58,11 +55,15 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "style-loader": "^1.0.0",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vuex": "^3.1.1",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
