--- a/vue/vue-cloud-music/package.json
+++ b/vue/vue-cloud-music/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.0",
     "better-scroll": "^1.15.2",
     "fastclick": "^1.0.6",
+    "lyric-parser": "^1.0.1",
     "vue": "^2.5.2",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.0.1"
