--- a/koa/koa-hello/package.json
+++ b/koa/koa-hello/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.10.0"
+    "koa": "^2.10.0",
+    "koa-body": "^4.1.1"
   }
 }
