--- a/vue/vue-vuex-chats/package.json
+++ b/vue/vue-vuex-chats/package.json
@@ -11,7 +11,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "babel-polyfill": "^6.26.0",
+    "vue": "^2.5.2",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
